2006-03-24  Maciej Stachowiak  <mjs@apple.com>

        * source/Window.xml:
        - added a new conformace class, "conforming Java implementation", and a placeholder Java appendix
        - replaced many "need a cross reference" ednotes with bibliography references
        - added remaining attribute and method descriptions from Ian Davis's draft
        - started converting more of the attribute descriptions to conformance requirements 
        - a bunch of reformatting and rewording
        - mentioned possibility of parentWindow property
        - tried to add <ednote>s for any obvious missing pieces and open issues.
        - started converting term definitions and references to <termdfn> and <term>.

        * publish/Window.html: Regenerated with my locally hacked ReSpec.

2006-03-19  Maciej Stachowiak  <mjs@apple.com>
        
        * source/Window.xml:
        - fixed a number of grammar and spelling problems I found while
        writing tests.
        
        * publish/Window.html: regenerated

2006-03-19  Maciej Stachowiak  <mjs@apple.com>
        
        * source/Window.xml:
        - added Ian Davis as editor
        - added current and latest links
        - folded in Ian's attribute descriptions for basic attributes of the Window object
        - added prose for the Browsing Contexts section, influenced by Web Apps 1.0 draft
        - tweaked Ian's descriptions to be stated as conformance requirements
        - removed some no longer needed comments
        - started moving to model with a single Window interface described in multiple sections
        - added description of basic DocumentWindow interface
        - fixed some types and source formattig issues
        - added acknowledgement for Ian Hickson
        
        * publish/Window.html: regenerated

2006-03-13  Maciej Stachowiak  <mjs@apple.com>

        - added initial generated HTML version
        
        * source/Window.xml: Update date.
        * source/respec.conf: Added.