@@ -1,3 +1,10 @@
+2006-03-25  Maciej Stachowiak  <mjs@apple.com>
+
+        * source/Window.xml:
+        - added Anne's text for the Embedding section
+        
+        * publish/Window.html: regenerated
+
 2006-03-24  Maciej Stachowiak  <mjs@apple.com>
 
         * source/Window.xml:
